[gd_scene load_steps=7 format=2]

[ext_resource path="res://shared_assets/pirata_one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/gameover_menu/gameover_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/menu_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 0.478431 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="GameOverMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 371.0
margin_top = 199.0
margin_right = 642.0
margin_bottom = 293.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 271.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 439.0
margin_top = 419.0
margin_right = 575.0
margin_bottom = 467.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "main menu"
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
